--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,56 +1,57 @@
 /* Login.css */
 .login-container {
-    width: 300px;
-    margin: 40px auto;
-    padding: 20px;
-    text-align: center;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .login-container h2 {
-    margin-bottom: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .form-group input {
-    width: 100%;
-    padding: 8px;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  .login-button {
-    width: 100%;
-    padding: 10px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  .login-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .error-message {
-    color: red;
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-  }
-  
+  background: radial-gradient(#bae4f1, transparent);
+  width: 350px;
+  margin: 100px auto;
+  padding: 25px;
+  padding-bottom: 40px;
+  text-align: center;
+  border: 1px solid #66c6f0;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(100, 193, 251, 0.226);
+}
+
+.login-container h2 {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input {
+  width: 95%;
+  padding: 8px;
+  font-size: 1rem;
+  border: 1px solid #b5bae4;
+  border-radius: 3px;
+}
+
+.login-button {
+  width: 40%;
+  padding: 10px;
+  font-size: 1rem;
+  color: #fff;
+  background-color: #0a97ef;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.login-button:hover {
+  background-color: #0056b3;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-bottom: 10px;
+}
