--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,16 +1,13 @@
 /* Register.css */
 .register-container {
+    background: radial-gradient(#bae4f1, transparent);
     width: 350px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 5% auto;
+    padding: 10px 25px;
     text-align: center;
-    border: 1px solid #ddd;
+    border: 1px solid #66c6f0;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .register-container h2 {
-    margin-bottom: 20px;
+    box-shadow: 0px 0px 10px rgba(100, 193, 251, 0.226);
   }
   
   .form-group {
@@ -28,12 +25,12 @@
     width: 95%;
     padding: 8px;
     font-size: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid #b5bae4;
     border-radius: 3px;
   }
   
   .register-button {
-    width: 100%;
+    width: 40%;
     padding: 10px;
     font-size: 1rem;
     color: #fff;
