--- a/src/components/Response/Response.css
+++ b/src/components/Response/Response.css
@@ -77,7 +77,7 @@
   }
   
   .back-button:hover {
-    background-color: #e53935;
+    background-color: #cd1d1a;
   }
   
   /* Media Queries for Responsiveness */
