--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,57 +1,112 @@
-/* Login.css */
-.login-container {
-  background: radial-gradient(#bae4f1, transparent);
-  width: 350px;
-  margin: 100px auto;
-  padding: 25px;
-  padding-bottom: 40px;
-  text-align: center;
-  border: 1px solid #66c6f0;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(100, 193, 251, 0.226);
+
+.login-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f5;
+  padding: 20px;
 }
 
-.login-container h2 {
-  margin-bottom: 20px;
+.login-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  width: 100%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
 }
 
 .form-group {
   margin-bottom: 15px;
-  text-align: left;
 }
 
-.form-group label {
-  display: block;
+label {
   margin-bottom: 5px;
-  font-weight: bold;
+  font-size: 14px;
+  color: #333;
 }
 
-.form-group input {
-  width: 95%;
-  padding: 8px;
-  font-size: 1rem;
-  border: 1px solid #b5bae4;
-  border-radius: 3px;
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="checkbox"] {
+  margin-right: 10px;
 }
 
 .login-button {
-  width: 40%;
+  background-color: #4CAF50;
+  color: white;
   padding: 10px;
-  font-size: 1rem;
-  color: #fff;
-  background-color: #0a97ef;
+  font-size: 16px;
   border: none;
-  border-radius: 3px;
+  border-radius: 4px;
   cursor: pointer;
-  margin-top: 10px;
 }
 
 .login-button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
 }
+
 
 .error-message {
   color: red;
-  font-size: 0.9rem;
+  font-size: 14px;
   margin-bottom: 10px;
+}
+
+
+@media screen and (max-width: 768px) {
+  .login-container {
+    max-width: 350px;
+    padding: 15px;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    font-size: 12px;
+    padding: 8px;
+  }
+
+  .login-button {
+    font-size: 14px;
+    padding: 8px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .login-container {
+    max-width: 300px;
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    font-size: 12px;
+    padding: 6px;
+  }
+
+  .login-button {
+    font-size: 14px;
+    padding: 6px;
+  }
+
+  label {
+    font-size: 12px;
+  }
 }
