--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,13 +1,33 @@
-
+/* Main container styling */
 .login-main {
   display: flex;
+  flex-direction: row; /* For better stacking on smaller devices */
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  gap: 20px;
+  height: 100vh;  
   background-color: #f0f0f5;
   padding: 20px;
+  box-sizing: border-box;
+  margin-top: 50px;
 }
 
+.my-content {
+  margin-bottom: 20px;
+  width: 45%;
+}
+
+.my-content h2 {
+  font-size: 24px;
+  color: #333;
+}
+
+.my-content p {
+  font-size: 16px;
+  color: #555;
+}
+
+/* Login container styling */
 .login-container {
   background-color: #fff;
   padding: 20px;
@@ -15,8 +35,16 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   max-width: 400px;
   width: 100%;
+  box-sizing: border-box;
 }
 
+h2 {
+  font-size: 22px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+/* Login form styling */
 .login-form {
   display: flex;
   flex-direction: column;
@@ -35,60 +63,99 @@ label {
 input[type="text"],
 input[type="password"] {
   width: 100%;
-  padding: 10px;
+  padding: 12px;
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
-}
-
-input[type="checkbox"] {
-  margin-right: 10px;
+  box-sizing: border-box;
 }
 
 .login-button {
   background-color: #4CAF50;
   color: white;
-  padding: 10px;
+  padding: 12px;
   font-size: 16px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .login-button:hover {
   background-color: #45a049;
 }
 
-
-.error-message {
-  color: red;
+/* Error and success message styling */
+.error-message,
+.success-message {
   font-size: 14px;
   margin-bottom: 10px;
 }
 
+.error-message {
+  color: red;
+}
 
+.success-message {
+  color: green;
+}
+
+/* Responsive styling */
 @media screen and (max-width: 768px) {
+  .login-main{
+    display: flex;
+    flex-direction: column;
+  }
+
   .login-container {
     max-width: 350px;
     padding: 15px;
   }
+  .my-content{
+    width: 100%;
+  }
+  
+
+  .my-content > h2 {
+    font-size: 20px;
+  }
 
   input[type="text"],
   input[type="password"] {
-    font-size: 12px;
-    padding: 8px;
+    font-size: 14px;
+    padding: 10px;
   }
 
   .login-button {
-    font-size: 14px;
-    padding: 8px;
+    font-size: 15px;
+    padding: 10px;
+  }
+
+  label {
+    font-size: 13px;
   }
 }
 
 @media screen and (max-width: 480px) {
+  .login-main{
+    height: 100%;
+  }
+
   .login-container {
     max-width: 300px;
     padding: 10px;
+  }
+
+  .my-content h2 {
+    font-size: 20px;
+  }
+
+  .my-content{
+    width: 100%;
+  }
+
+  .my-content p {
+    font-size: 14px;
   }
 
   h2 {
@@ -98,12 +165,12 @@ input[type="checkbox"] {
   input[type="text"],
   input[type="password"] {
     font-size: 12px;
-    padding: 6px;
+    padding: 8px;
   }
 
   .login-button {
     font-size: 14px;
-    padding: 6px;
+    padding: 8px;
   }
 
   label {
