--- a/src/components/Base/Base.css
+++ b/src/components/Base/Base.css
@@ -3,13 +3,13 @@
   text-align: center;
   margin-top: 60px;
   height: 100vh;
-  background: linear-gradient(to bottom, #e8f5e9, #d1f7d5);
+  background: linear-gradient(to bottom, #e8f3f5, #eef5ff);
   animation: fadeIn 1.5s ease-in-out;
 }
 
 .base-header {
-  background-color: #4caf50;
-  color: white;
+  background-color: #cce7f5;
+  color: black;
   padding: 20px;
   border-radius: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -19,6 +19,9 @@
 .base-header:hover {
   transform: scale(1.05);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+.paragraph{
+  text-align: justify;
 }
 
 .base-details {
