--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 /* Footer Styles */
 .footer {
+  margin-top: auto;
   background-color: #2c3e50;
   color: #ecf0f1;
   padding: 5px 0;
@@ -20,6 +21,7 @@
   flex: 1;
   margin: 10px;
   min-width: 250px;
+  padding: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
