--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,16 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+/* Apply flexbox to the body */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
 .main-div {
   margin-top: 55px;
   display: flex;
@@ -14,7 +27,7 @@
 }
 
 .aai-financials-info > h2 {
-  background-color: rgb(164, 252, 222);
+  background-color: rgb(174, 215, 250);
   padding: 10px;
   border-radius: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -27,7 +40,8 @@
 
 .aai-financials-details{
   margin-top: 20px;
-  background-color: rgb(229, 247, 240);
+  text-align: justify;
+  background-color: rgb(229, 240, 247);
   padding: 20px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -36,12 +50,12 @@
 
 .aai-financials-details:hover {
   transform: translateY(-10px);
-  background-color: rgb(213, 243, 224);
+  background-color: rgb(213, 234, 243);
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
 }
 
 .user-details {
-  width: 26%;
+  width: 30%;
   padding: 20px;
   box-sizing: border-box;
   background-color: #ffffff;
@@ -169,11 +183,15 @@
   transform: scale(1.1);
 }
 
-@media only screen and (max-width: 668px) {
+@media only screen and (max-width: 828px) {
   .main-div {
     flex-direction: column;
     height: 100%;
     animation: fadeIn 1.5s ease-in-out;
+  }
+
+  .aai-financials-info{
+    width: 90%;
   }
 
   .navigation-buttons {
@@ -237,7 +255,7 @@
 
 @keyframes slideInLeft {
   from {
-    transform: translateX(-100%);
+    transform: translateX(100%);
     opacity: 0;
   }
   to {
