--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -29,6 +29,10 @@
   color: yellow;
   animation: fadeInLeft 0.7s ease-in-out;
 }
+.dash-navbar > img{
+  width: 100%;
+  height: 40px;
+}
 
 /* Navigation buttons container */
 .nav-buttons {
