--- a/src/components/EditUser/EditUser.css
+++ b/src/components/EditUser/EditUser.css
@@ -31,7 +31,8 @@
 .user-details-container {
   padding: 20px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   max-width: 800px;
 }
 
