--- a/src/components/Response/Response.css
+++ b/src/components/Response/Response.css
@@ -3,7 +3,8 @@
   width: 90%;
   max-width: 600px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   padding: 10px;
   background-color: #f7f9fc;
   border-radius: 8px;
